--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -25,6 +25,7 @@
     font-weight: 600;
     gap: 15px;
     margin: 15px 0 5px;
+    position: relative;
 
     * {
       overflow: hidden;
@@ -50,13 +51,37 @@
     align-items: center;
     display: flex;
     gap: 10px;
-    margin-top: 10px;
+    margin-top: 20px;
     position: relative;
   }
 
-  &__save {
+  &__action--right {
+    font-size: 16px;
     position: absolute;
     right: 0;
+  }
+}
+
+.display-switch {
+  align-items: center;
+  border: 1px solid var(--color-border);
+  border-radius: 5px;
+  display: flex;
+  height: 100%;
+  overflow: hidden;
+
+  &__button {
+    align-items: center;
+    background-color: var(--background-secondary);
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    transition: background-color 0.25s ease;
+    width: 50px;
+
+    &--active {
+      background-color: var(--background-toolbar--active);
+    }
   }
 }
 
