--- a/src/assets/stylesheets/modules/ground-truth.module.scss
+++ b/src/assets/stylesheets/modules/ground-truth.module.scss
@@ -36,6 +36,13 @@
   overflow-y: auto;
   padding-right: 10px;
   scrollbar-gutter: stable;
+
+  &--small {
+    margin: 0;
+    max-height: 200px;
+    overflow-y: scroll;
+    padding: 0;
+  }
 }
 
 .entity-card {
@@ -166,6 +173,26 @@
       background-color: var(--background-toolbar);
     }
   }
+
+  &__tooltip {
+    min-width: 200px;
+  }
+
+  &__tooltip-label {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+
+  &__tooltip-attribute {
+    align-items: center;
+    display: flex;
+    gap: 10px;
+
+    div {
+      font-weight: 600;
+    }
+  }
 }
 
 .entity-list-item {
@@ -198,8 +225,45 @@
     font-size: 20px;
   }
 
+  .entity-card__title {
+    font-weight: 600;
+  }
+
   .entity-card__count {
     font-size: 16px;
+  }
+
+  .entity-card__image-badge {
+    bottom: 5px;
+    height: 15px;
+    left: 5px;
+    width: 15px;
+  }
+
+  &__actions {
+    align-items: center;
+    display: flex;
+    gap: 10px;
+    justify-content: flex-end;
+    padding-right: 10px;
+  }
+
+  &--small {
+    grid-template-columns: 60px 1fr 100px;
+    height: 60px;
+
+    .entity-card__title {
+      font-size: 12px;
+    }
+
+    .entity-list-item__actions {
+      button {
+        max-height: 20px;
+        max-width: 20px;
+        min-height: 20px;
+        min-width: 20px;
+      }
+    }
   }
 }
 
@@ -246,7 +310,7 @@
   margin-top: 20px;
   max-height: calc(100% - 20px);
   overflow-y: auto;
-  padding: 20px 30px;
+  padding: 20px 25px 50px;
   position: relative;
 
   &__edit {
@@ -322,12 +386,19 @@
     display: flex;
     height: calc(100% - 150px);
     justify-content: center;
+    position: relative;
   }
 
   &__image {
     max-height: 100%;
     max-width: 100%;
     object-fit: contain;
+  }
+
+  &__image-link {
+    position: absolute;
+    right: 5px;
+    top: 5px;
   }
 
   &__details {
@@ -439,6 +510,8 @@
   width: 100%;
 
   &--dragging {
+    border-radius: 0;
+
     .attribute-form__inputs {
       display: none;
     }
