--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -196,6 +196,12 @@
   &:disabled {
     opacity: 0.7;
   }
+
+  &--small {
+    font-size: 12px;
+    height: 30px;
+    padding-inline: 15px;
+  }
 }
 
 .copy-button {
