--- a/src/assets/stylesheets/modules/ground-truth.module.scss
+++ b/src/assets/stylesheets/modules/ground-truth.module.scss
@@ -121,7 +121,7 @@
   }
 
   &__description {
-    background-color: var(--background-toolbar);
+    background-color: var(--background-modal);
     border-radius: 10px;
     font-size: 16px;
     margin-top: 10px;
