--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -21,6 +21,7 @@
   --content-border-radius: 5px;
   --content-inline-padding: 20px;
   --color-border: #5C5B5F;
+  --background-search-input: #322b37;
 
   /* Note: Gutter sizes are doubled due to resize handles */
   --gutter-size-x: 3px;
