--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -7,12 +7,24 @@
     }
   }
 
-  &__top-search {
+  &__filters {
     align-items: center;
     display: flex;
     gap: 30px;
-    margin-bottom: 10px;
+    margin: 10px 0;
     padding-right: 5px;
+  }
+
+  &__filter-input {
+    border-radius: 5px;
+    flex-grow: 1;
+
+    input {
+      background-color: transparent;
+      border: 1px solid var(--content-border-color);
+      border-radius: 8px;
+      padding-inline: 15px;
+    }
   }
 }
 
@@ -23,7 +35,6 @@
   max-height: 100vh;
   min-height: 100vh;
   overflow-y: auto;
-  padding: 5px;
   width: 100%;
 
   &__header {
@@ -104,13 +115,31 @@
 .search-bar-container {
   align-items: center;
   display: flex;
+  padding: 5px;
   position: relative;
+
+  &__search-icon {
+    height: 20px;
+    margin-right: 20px;
+    max-height: 20px;
+    max-width: 20px;
+    min-height: 20px;
+    min-width: 20px;
+    width: 20px;
+
+    * {
+      fill: var(--text-tertiary);
+      height: 20px;
+      stroke: var(--text-tertiary);
+      width: 20px;
+    }
+  }
 
   &__button-left {
     align-items: center;
     display: flex;
     justify-content: center;
-    left: 20px;
+    left: 60px;
     position: absolute;
   }
 
@@ -121,6 +150,20 @@
 
   &--ai {
     flex-grow: 1;
+
+    * {
+      color: var(--text-primary)!important;
+    }
+
+    input {
+      background-color: var(--background-search-input);
+      height: 50px;
+
+      &::placeholder {
+        color: var(--text-secondary);
+        font-size: 18px;
+      }
+    }
   }
 }
 
@@ -133,6 +176,50 @@
 
   &--ai {
     padding-left: 60px;
+  }
+}
+
+.active-item {
+  margin-top: 20px;
+  padding-left: 10px;
+  width: max-content;
+
+  &__header {
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 5px;
+  }
+
+  &__content {
+    border-radius: 8px;
+    display: flex;
+    gap: 20px;
+    padding: 5px 10px;
+    transition: background-color 0.25s ease;
+
+    &:hover {
+      background-color: var(--background-active);
+    }
+  }
+
+  &__icons {
+    align-items: center;
+    display: flex;
+    gap: 15px;
+  }
+
+  &__icon {
+    height: 25px;
+    width: 25px;
+
+    &--pin {
+      color: var(--text-highlight);
+    }
+  }
+
+  &__id {
+    color: var(--text-tertiary);
+    font-size: 11px;
   }
 }
 
@@ -176,6 +263,17 @@
     .browser-table__row {
       grid-template-columns: 1fr 100px 200px 100px;
     }
+  }
+
+  &--loading,
+  &--empty {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  &--with-active-item {
+    min-height: calc(9 * var(--row-height));
   }
 
   &__row {
@@ -263,14 +361,6 @@
     padding: 10px 0;
   }
 
-  &--loading,
-  &--empty {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    min-height: calc(11 * var(--row-height));
-  }
-
   &__message {
     font-size: 20px;
     font-weight: 500;
@@ -294,9 +384,9 @@
 
     min-height: calc(9 * var(--row-height));
 
-    &--loading,
-    &--empty {
-      min-height: calc(9 * var(--row-height));
+
+    &--with-active-item {
+      min-height: calc(7 * var(--row-height));
     }
   }
 }
