--- a/src/assets/stylesheets/modules/shared.module.scss
+++ b/src/assets/stylesheets/modules/shared.module.scss
@@ -335,6 +335,10 @@
   &--with-sidebar {
     grid-template-columns: 1fr 400px;
   }
+
+  &--search {
+    max-height: calc(100vh - 175px);
+  }
 }
 
 .entity-grid {
