--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -21,7 +21,7 @@
 
     input {
       background-color: transparent;
-      border: 1px solid var(--content-border-color);
+      border: 1px solid var(--table-border-color);
       border-radius: 8px;
       padding-inline: 15px;
     }
@@ -54,11 +54,6 @@
       overflow: hidden;
       white-space: nowrap;
     }
-
-    :last-child {
-      min-width: unset;
-      text-overflow: ellipsis;
-    }
   }
 
   &__header-back {
@@ -72,6 +67,22 @@
     font-size: 10px;
     font-weight: 400;
     padding-top: 2px;
+  }
+
+  &__header-last {
+    min-width: unset;
+    text-overflow: ellipsis;
+  }
+
+  &__header-right {
+    display: flex;
+    flex-grow: 1;
+    justify-content: flex-end;
+  }
+
+  &__id {
+    color: var(--text-tertiary);
+    font-size: 16px;
   }
 
   &__actions {
