--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -154,9 +154,16 @@
     position: absolute;
   }
 
-  &__button-right {
+  &__right-buttons {
+    align-items: center;
+    display: flex;
+    gap: 10px;
     position: absolute;
     right: 20px;
+
+    * {
+      color: var(--text-tertiary);
+    }
   }
 
   &--ai {
@@ -281,6 +288,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    min-height: 200px;
   }
 
   &--with-active-item {
