--- a/src/assets/stylesheets/modules/compositions.module.scss
+++ b/src/assets/stylesheets/modules/compositions.module.scss
@@ -140,6 +140,8 @@
   gap: 12px;
   height: 100%;
   justify-content: center;
+  min-height: 150px;
+  padding-bottom: 10px;
   width: 100%;
 
   --row-height: 50px;
