--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -80,6 +80,17 @@
     justify-content: flex-end;
   }
 
+  &__header-actions {
+    align-items: center;
+    color: var(--text-tertiary);
+    display: flex;
+    font-size: 14px;
+    font-weight: 400;
+    gap: 10px;
+    position: absolute;
+    right: 0;
+  }
+
   &__id {
     color: var(--text-tertiary);
     font-size: 16px;
@@ -94,7 +105,6 @@
   }
 
   &__action--right {
-    font-size: 16px;
     position: absolute;
     right: 0;
   }
