--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -37,6 +37,7 @@
   --text-disabled: #4b494e;
   --text-highlight: var(--color-highlight);
   --text-highlight-secondary: var(--color-highlight-secondary);
+  --text-pass: #66ce66;
   --text-error: #ce6666;
   --table-border-color: #3B3B3B;
   --font-default: inter, system-ui, "Segoe UI", roboto, helvetica, arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
