--- a/src/assets/stylesheets/modules/lists.module.scss
+++ b/src/assets/stylesheets/modules/lists.module.scss
@@ -65,6 +65,13 @@
         width: 50px;
       }
     }
+
+    &--hover {
+      border-radius: 10px;
+      box-shadow: 0 0 10px black;
+      max-height: 250px;
+      max-width: 250px;
+    }
   }
 
   &__image-badge {
