--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -618,6 +618,7 @@
   height: 100%;
   min-height: 0;
   overflow: hidden auto;
+  scrollbar-gutter: stable;
   width: 100%;
 
   &--track {
@@ -978,53 +979,5 @@
   &__loader {
     height: 30px;
     margin-top: 50px;
-  }
-}
-
-.entity-option-wrapper {
-  padding: 0;
-
-  &:not(:last-child) {
-    margin-bottom: 5px;
-  }
-}
-
-// Ground truth
-.entity-option {
-  border-radius: 10px;
-  display: grid;
-  gap: 10px;
-  grid-template-columns: 50px 1fr;
-  width: 100%;
-
-  &--selected {
-    background-color: var(--background-toolbar--highlight);
-  }
-
-  &__image-container {
-    height: 50px;
-    overflow: hidden;
-    position: relative;
-    width: 50px;
-  }
-
-  &__image {
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    width: 100%;
-  }
-
-  &__tooltip-image {
-    box-shadow: 0 0 10px black;
-    max-height: 300px;
-    max-width: 300px;
-    object-fit: contain;
-  }
-
-  &__text {
-    align-items: center;
-    display: flex;
-    font-weight: 600;
   }
 }
