--- a/src/assets/stylesheets/modules/shared.module.scss
+++ b/src/assets/stylesheets/modules/shared.module.scss
@@ -107,6 +107,8 @@
     justify-content: space-between;
 
     &__controls-group {
+      gap: 5px;
+
       &.left,
       &.right,
       &.center {
