Fix search results page

--- a/src/assets/stylesheets/modules/search.module.scss
+++ b/src/assets/stylesheets/modules/search.module.scss
@@ -177,6 +177,13 @@
       }
     }
   }
+
+  @media screen and (width <= 1400px) {
+
+    &__time {
+      display: none;
+    }
+  }
 }
 
 .summary-box {
