--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -390,7 +390,8 @@
 
   &__icon {
     color: var(--mantine-color-dark-3);
-    margin-right: 10px;
+    height: 20px;
+    width: 50px;
   }
 
   &__icon-button {
