--- a/src/assets/stylesheets/modules/search.module.scss
+++ b/src/assets/stylesheets/modules/search.module.scss
@@ -5,13 +5,21 @@
     box-shadow: 0 0 6px var(--color-highlight);
     padding: 5px;
   }
+
+  &__score {
+    background: var(--background-toolbar--active);
+    border-radius: 5px;
+    color: var(--text-secondary);
+    font-size: 12px;
+    font-weight: 600;
+    padding: 2px 5px
+  }
 }
 
 .result-page {
   max-height: calc(100vh - 125px);
   overflow: hidden;
   padding-top: 10px;
-
 
   &__side-panel {
     margin-right: 10px;
@@ -22,7 +30,7 @@
 .result {
   &__video {
     height: 100%;
-    max-height: calc(100vh - 375px);
+    max-height: calc(100vh - 315px);
     width: 100%;
   }
 
@@ -31,17 +39,17 @@
     align-items: center;
     background-color: black;
     display: flex;
-    height: calc(100vh - 475px);
+    height: calc(100vh - 455px);
     justify-content: center;
     margin-bottom: 10px;
     overflow: hidden;
     position: relative;
     width: 100%;
   }
-
+  
   &__video-container {
     height: auto;
-    max-height: calc(100vh - 350px);
+    max-height: calc(100vh - 315px);
   }
 
   &__image {
@@ -123,6 +131,8 @@
   &__summary {
     font-size: 14px;
     margin-top: 10px;
+    max-height: 65px;
+    overflow-y: auto;
   }
 
   &__display-metadata {
@@ -179,7 +189,6 @@
   }
 
   @media screen and (width <= 1400px) {
-
     &__time {
       display: none;
     }
@@ -192,16 +201,15 @@
   border-radius: 4px;
   display: flex;
   gap: 20px;
-  height: 135px;
   margin-inline: auto;
   margin-top: 15px;
   max-width: 400px;
-  padding: 20px;
+  padding: 15px;
   text-align: left;
   width: 400px;
 
   &__image {
-    width: 140px;
+    width: 120px;
 
     &--generating {
       opacity: 0.5;
@@ -214,12 +222,11 @@
 
   &__title {
     font-weight: 500;
-    margin-bottom: 5px;
   }
 
   &__description {
     color: var(--text-tertiary);
-    font-size: 14px;
+    font-size: 13px;
   }
 
   &__loader {
