--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -831,7 +831,7 @@
     position: absolute;
     transition: opacity 0.15s ease;
     user-select: none;
-    z-index: 1;
+    z-index: 100;
 
     &--active {
       opacity: 0.8;
@@ -844,6 +844,7 @@
   border: 1px solid transparent;
   border-radius: 5px;
   cursor: pointer;
+  overflow: hidden;
   padding: 1px;
   position: relative;
   transition: opacity 0.25s ease;
@@ -857,17 +858,20 @@
   }
 
   &--active {
-    border: 1px solid var(--color-highlight);
+    border: 1px solid var(--color-border);
     box-shadow: 0 0 5px var(--color-highlight);
   }
 
   &__image {
-    border-radius: 5px;
-    margin-bottom: 5px;
+    border-radius: 3px;
 
     &--loading {
       pointer-events: none;
     }
+  }
+
+  &__text {
+    padding: 5px;
   }
 
   &__name {
