--- a/src/assets/stylesheets/modules/timeline.module.scss
+++ b/src/assets/stylesheets/modules/timeline.module.scss
@@ -307,9 +307,9 @@
     align-items: center;
     display: flex;
     font-weight: 600;
-    height: 200px;
+    height: 110px;
     justify-content: center;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
   }
 
   &__content {
@@ -349,7 +349,8 @@
 
   &__item-thumbnail {
     border-radius: 8px;
-    width: 125px;
+    min-width: 155px;
+    width: 155px;
   }
 
   &__item-text {
@@ -361,16 +362,19 @@
   }
 
   &__item-title {
+    color: var(--text-primary);
+    font-weight: 600;
     max-width: 100%;
     overflow: hidden;
   }
 
   &__item-offering,
   &__item-duration {
-    color: var(--text-tertiary);
+    color: var(--text-secondary);
+    font-size: 12px;
 
     * {
-      color: var(--text-tertiary);
+      font-size: 12px;
     }
   }
 
